@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-12-07T16:06:35Z",
+  "timestamp" : "2022-12-08T16:07:06Z",
   "count_outdated" : 700,
   "uniques_outdated" : 154,
-  "count" : 705,
-  "uniques" : 158,
+  "count" : 707,
+  "uniques" : 159,
   "views" : [
     {
       "timestamp": "2022-11-24T00:00:00Z",
@@ -28,6 +28,13 @@
     },
     {
       "timestamp": "2022-12-05T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-12-08T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "uniques": 1,
