@@ -1,6 +1,6 @@
 {
-  "count": 5,
-  "uniques": 4,
+  "count": 7,
+  "uniques": 5,
   "views": [
     {
       "timestamp": "2022-11-24T00:00:00Z",
@@ -19,6 +19,11 @@
     },
     {
       "timestamp": "2022-12-05T00:00:00Z",
+      "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-12-08T00:00:00Z",
       "count": 2,
       "uniques": 1
     }
